--- a/templates/about.html
+++ b/templates/about.html
@@ -2,13 +2,17 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/app.css') }}" />
         <title>My Website - About</title>
     </head>
     <body>
-        <h1>Tara Henry</h1>
-        <p>I am an Electronics and Computer Science student, looking to achieve great heights in the world of innovation.
-        I love to dance, play games, hang out with friends and listen to music in my spare time when I am not swallowed by work.
-        I am still contemplating what path I would like to take within my field and as such, 
-        I am committed to exploring as much as I can so as to not limit myself.</p>
+        <div class="container">
+            <h1>Tara Henry</h1>
+            <img src="{{ url_for('static', filename='aurora.jpeg') }}"/>
+            <p>I am an Electronics and Computer Science student, looking to achieve great heights in the world of innovation.
+            I love to dance, play games, hang out with friends and listen to music in my spare time when I am not swallowed by work.
+            I am still contemplating what path I would like to take within my field and as such, 
+            I am committed to exploring as much as I can so as to not limit myself.</p>
+        </div>
     </body>
 </html>
